--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,14 @@
             <version>1.2.38</version>
         </dependency>
 
+        <!-- 单元测试 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 </project>
